# echo-id-contract

./: Anchor.toml  package-lock.json  package.json  readme.md  tsconfig.json
programs/echo_id_contract/: Cargo.toml
programs/echo_id_contract/src/: error.rs  lib.rs  merkle.rs  signature.rs  state.rs  zkp.rs
programs/echo_id_contract/src/instructions/: add_chain_mapping.rs  add_product_owner.rs  create_suffix.rs  initialize.rs  initialize_reputation.rs  mod.rs  register_alias.rs  register_product_owner.rs  register_project_suffix.rs  update_reputation.rs  verify_alias_ownership.rs
tests/: echo_id_contract.ts
