[package]
name = "echo_id_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "echo_id_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
sha2 = "0.9.9"
curve25519-dalek = { version = "3.2.0", features = ["u64_backend"] }
rand = "0.7.3"
rand_core = "0.5.1"
