[package]
name = "echo_id_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "echo_id_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.29.0"
sha2 = "0.9.9"
rand = { version = "0.7.3", features = ["getrandom"] }
getrandom = { version = "0.1.16", features = ["dummy"] }
rand_core = "0.5.1"
light-hasher = "1.1.0"
light-sdk = "0.11.0"
light-sdk-macros = "0.4.0"
light-utils="1.1.0"
light-verifier = "1.1.0"
light-macros = "1.1.0"
light-system-program = "1.2.0"